# wagtail-package-scaffold

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE-CODE-INSTALL.md  LICENSE  MANIFEST.in  Makefile  README.md  claude_code_install.md  claude_code_skill.md  install.sh  pyproject.toml  readme.md  usage.md
.claude/skills/wagtail-package-scaffolder/: SKILL.md
.claude/skills/wagtail-package-scaffolder/references/: file-templates.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: publish.yml  test.yml
docs/: configuration.md  index.md  installation.md
sandbox/home/: __init__.py  models.py
sandbox/home/migrations/: 0001_initial.py
sandbox/home/templates/home/: home_page.html
sandbox/sandbox/: __init__.py  settings.py  urls.py
sandbox/templates/: base.html
skills/wagtail-package-scaffolder/: SKILL.md
skills/wagtail-package-scaffolder/references/: file-templates.md
src/wagtail_heelo_world/: __init__.py  apps.py  models.py  wagtail_hooks.py
tests/: conftest.py  settings.py  test_models.py  urls.py
