[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wagtail-heelo-world"
version = "0.1.0"
description = "A hello world package for Wagtail"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Nick Moreton", email = "nickmoreton@me.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 7",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
    "wagtail>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "pre-commit>=3.5",
    "build>=1.0",
    "twine>=5.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/nickmoreton/wagtail-heelo-world"
Documentation = "https://github.com/nickmoreton/wagtail-heelo-world#readme"
Repository = "https://github.com/nickmoreton/wagtail-heelo-world.git"
Changelog = "https://github.com/nickmoreton/wagtail-heelo-world/blob/main/CHANGELOG.md"
Issues = "https://github.com/nickmoreton/wagtail-heelo-world/issues"

[tool.flit.module]
name = "wagtail_heelo_world"

[tool.flit.sdist]
include = [
    "CHANGELOG.md",
    "LICENSE",
]
exclude = [
    ".*",
    "tests/",
    "docs/",
]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "DJ",     # flake8-django
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["wagtail_heelo_world"]
known-third-party = ["django", "wagtail"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/wagtail_heelo_world"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]
